--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <title>融数金服</title>
     <link rel="stylesheet" href="css/app.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/main.css?11"/>
 </head>
 <body>
-<div ng-view id="main-container" class="container"></div>
+<div ng-view class="container"></div>  
 
 <script data-main="js/main.js" src="js/lib/require.js"></script>
 </body>
