--- a/enter.html
+++ b/enter.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>付款</title>
-    <link rel="stylesheet" href="css/app.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="styles/app.css"/>
+    <link rel="stylesheet" href="styles/main.css"/>
 </head>
 <body>
 <header class="ui-header ui-header-positive ui-border-b">
@@ -47,7 +47,7 @@
         </li>
     </ul>
 </section>
-<script src="js/lib/md5.js"></script>
+<script src="scripts/vendor/md5.js"></script>
 <script>
 	localStorage.removeItem('userData');
 
