--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <title>融数金服</title>
-    <link rel="stylesheet" href="css/app.css"/>
-    <link rel="stylesheet" href="css/main.css?11"/>
+    <link rel="stylesheet" href="styles/app.css"/>
+    <link rel="stylesheet" href="styles/main.css?11"/>
 </head>
 <body>
-<div ng-view class="container"></div>  
-
-<script data-main="js/main.js" src="js/lib/require.js"></script>
+<div ng-view class="viewport"></div>
+<script data-main="scripts/config.js" src="scripts/vendor/require.js"></script>
 </body>
 </html>
 
